bin_PROGRAMS = epubmaker
epubmaker_SOURCES = args.cpp  book.cpp  chapter.cpp  defaults.cpp  main.cpp  manifestEntry.cpp  misc.cpp  navPoint.cpp  order.cpp  resource.cpp  spineEntry.cpp

epubmaker_CXXFLAGS=-std=c++20 -Wall -Wpedantic -Wextra
epubmaker_CPPFLAGS=-I../include
epubmaker_LDFLAGS=-lzip -lzippp
